moved the data into a json file.

--- a/sources/VeloCity.Application/VeloCity.Application.csproj
+++ b/sources/VeloCity.Application/VeloCity.Application.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\VeloCity.DataAccess.Jsonfiles\VeloCity.DataAccess.JsonFiles.csproj" />
       <ProjectReference Include="..\VeloCity.Domain\VeloCity.Domain.csproj" />
     </ItemGroup>
 
