--- a/sources/VeloCity/VeloCity.csproj
+++ b/sources/VeloCity/VeloCity.csproj
@@ -15,6 +15,7 @@
     <ItemGroup>
       <ProjectReference Include="..\VeloCity.Application\VeloCity.Application.csproj" />
       <ProjectReference Include="..\VeloCity.DataAccess\VeloCity.DataAccess.csproj" />
+      <ProjectReference Include="..\VeloCity.Presentation\VeloCity.Presentation.csproj" />
     </ItemGroup>
 
 </Project>
