--- a/sources/VeloCity.Presentation/VeloCity.Presentation.csproj
+++ b/sources/VeloCity.Presentation/VeloCity.Presentation.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="ConsoleTools" Version="0.5.5" />
       <PackageReference Include="MediatR" Version="10.0.1" />
     </ItemGroup>
 
