--- a/sources/VeloCity.Bootstrapper/VeloCity.Bootstrapper.csproj
+++ b/sources/VeloCity.Bootstrapper/VeloCity.Bootstrapper.csproj
@@ -27,7 +27,7 @@
     </ItemGroup>
 
     <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-      <Exec Command="xcopy /y &quot;$(TargetDir)$(TargetName).exe&quot; &quot;$(TargetDir)velo.exe&quot;" />
+      <Exec Command="copy /y &quot;$(TargetDir)$(TargetName).exe&quot; &quot;$(TargetDir)velo.exe&quot;" />
     </Target>
 
 </Project>
