read the database location from the config file.

--- a/sources/VeloCity.Bootstrapper/appsettings.json
+++ b/sources/VeloCity.Bootstrapper/appsettings.json
@@ -1,5 +1,6 @@
 {
     "Debug": {
         "Verbose": true
-    }
+    },
+    "DatabaseLocation": "C:\\Users\\alexandru.iuga\\OneDrive - Nagarro\\Waters\\velo-city-database.json"
 }
