#1 - added mechanism to exclude sprints from the velocity calculation in the "sprint" command.

--- a/sources/VeloCity.Bootstrapper/appsettings.json
+++ b/sources/VeloCity.Bootstrapper/appsettings.json
@@ -1,6 +1,6 @@
 {
     "Debug": {
-        "Verbose": true
+        "Verbose": false
     },
     "DatabaseLocation": "C:\\Users\\alexandru.iuga\\OneDrive - Nagarro\\Waters\\velo-city-database.json"
 }
