--- a/sources/VeloCity.Installer.CustomActions.WinForms/VeloCity.Installer.CustomActions.WinForms.csproj
+++ b/sources/VeloCity.Installer.CustomActions.WinForms/VeloCity.Installer.CustomActions.WinForms.csproj
@@ -42,6 +42,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\AssemblyInfo.Shared.cs">
+      <Link>Properties\AssemblyInfo.Shared.cs</Link>
+    </Compile>
     <Compile Include="ChooseJsonFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
