--- a/sources/VeloCity.Installer.CustomActions/VeloCity.Installer.CustomActions.csproj
+++ b/sources/VeloCity.Installer.CustomActions/VeloCity.Installer.CustomActions.csproj
@@ -41,6 +41,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\AssemblyInfo.Shared.cs">
+      <Link>Properties\AssemblyInfo.Shared.cs</Link>
+    </Compile>
     <Compile Include="SelectDatabaseJsonFileCustomActions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UpdateConfigFileCustomActions.cs" />
