--- a/sources/VeloCity.Bootstrapper/VeloCity.Bootstrapper.csproj
+++ b/sources/VeloCity.Bootstrapper/VeloCity.Bootstrapper.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net5.0</TargetFramework>
-        <AssemblyName>DustInTheWind.VeloCity</AssemblyName>
+        <AssemblyName>velo</AssemblyName>
         <RootNamespace>DustInTheWind.VeloCity.Bootstrapper</RootNamespace>
     </PropertyGroup>
 
@@ -25,9 +25,5 @@
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
     </ItemGroup>
-
-    <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-        <Exec Command="copy /y &quot;$(TargetDir)$(TargetName).exe&quot; &quot;$(TargetDir)velo.exe&quot;" />
-    </Target>
 
 </Project>
