used grids to display data.

--- a/sources/VeloCity.Bootstrapper/appsettings.json
+++ b/sources/VeloCity.Bootstrapper/appsettings.json
@@ -2,5 +2,5 @@
     "Debug": {
         "Verbose": false
     },
-    "DatabaseLocation": "C:\\Users\\alexandru.iuga\\OneDrive - Nagarro\\Waters\\velo-city-database.json"
+    "DatabaseLocation": "velo-city-database.json"
 }
