added database editor configuration valu in the config file.

--- a/sources/VeloCity.Bootstrapper/appsettings.json
+++ b/sources/VeloCity.Bootstrapper/appsettings.json
@@ -1,6 +1,6 @@
 {
-    "Debug": {
-        "Verbose": false
-    },
-    "DatabaseLocation": "velo-city-database.json"
+    "ErrorMessageLevel": "Verbose",
+    "DatabaseLocation": "velo-city-database.json",
+    "DatabaseEditor": null,
+    "DatabaseEditorArguments": null
 }
