added a custom exception for the confugration read errors.

--- a/sources/VeloCity.Bootstrapper/appsettings.json
+++ b/sources/VeloCity.Bootstrapper/appsettings.json
@@ -1,5 +1,5 @@
 {
-    "ErrorMessageLevel": "Verbose",
+    "ErrorMessageLevel": "Simple",
     "DatabaseLocation": "velo-city-database.json",
     "DatabaseEditor": null,
     "DatabaseEditorArguments": null
