#7 - fixed crush when user had no vacation in the database.

--- a/sources/VeloCity.Bootstrapper/appsettings.json
+++ b/sources/VeloCity.Bootstrapper/appsettings.json
@@ -1,6 +1,15 @@
 {
+    // Controls the level of details for a displayed error.
+    // Possible Values: Verbose, Simple [Default]
     "ErrorMessageLevel": "Simple",
+
     "DatabaseLocation": "velo-city-database.json",
+
+    // Specifies the program used for editing the json database file.
     "DatabaseEditor": null,
+
+    // Specifies the arguments to be used when starting the json database editor program.
+    // If "null", the default is assumed: program.exe <file-name.json>
+    // If no database editor is specified, this value is ignored.
     "DatabaseEditorArguments": null
 }
