--- a/sources/VeloCity.Bootstrapper/appsettings.json
+++ b/sources/VeloCity.Bootstrapper/appsettings.json
@@ -3,6 +3,7 @@
     // Possible Values: Verbose, Simple [Default]
     "ErrorMessageLevel": "Simple",
 
+    // The path to the json file containing the user data.
     "DatabaseLocation": "velo-city-database.json",
 
     // Specifies the program used for editing the json database file.
@@ -11,5 +12,9 @@
     // Specifies the arguments to be used when starting the json database editor program.
     // If "null", the default is assumed: program.exe <file-name.json>
     // If no database editor is specified, this value is ignored.
-    "DatabaseEditorArguments": null
+    "DatabaseEditorArguments": null,
+
+    // Specifies the style used for displaying the data grids.
+    // Possible Values: PlusMinus [Default], SingleLine, DoubleLine.
+    "DataGridStyle": "SingleLine"
 }
