--- a/sources/VeloCity.Bootstrapper/appsettings.json
+++ b/sources/VeloCity.Bootstrapper/appsettings.json
@@ -1,20 +1,28 @@
 {
     // Controls the level of details for a displayed error.
-    // Possible Values: Verbose, Simple [Default]
+    // Possible values: Verbose, Simple
+    // Default value: Simple
     "ErrorMessageLevel": "Simple",
 
     // The path to the json file containing the user data.
+    // Mandatory.
     "DatabaseLocation": "velo-city-database.json",
 
-    // Specifies the program used for editing the json database file.
+    // The program used for editing the json database file.
     "DatabaseEditor": null,
 
-    // Specifies the arguments to be used when starting the json database editor program.
+    // The arguments to be used when starting the json database editor program.
     // If "null", the default is assumed: program.exe <file-name.json>
     // If no database editor is specified, this value is ignored.
     "DatabaseEditorArguments": null,
 
     // Specifies the style used for displaying the data grids.
-    // Possible Values: PlusMinus [Default], SingleLine, DoubleLine.
-    "DataGridStyle": "SingleLine"
+    // Possible values: PlusMinus, SingleLine, DoubleLine.
+    // Default value: PlusMinus
+    "DataGridStyle": "SingleLine",
+
+    // The number of sprints from the past to be used when estimating the velocity for the next sprint.
+    // Value type: integer
+    // Default value: 3
+    "AnalysisLookBack": 3
 }
