code cleanup, created custom exceptions, moved the command router in the infrastructure project.

--- a/sources/VeloCity.Bootstrapper/Properties/launchSettings.json
+++ b/sources/VeloCity.Bootstrapper/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "VeloCity.Bootstrapper": {
-      "commandName": "Project",
-      "commandLineArgs": "sprint -show-team"
+      "commandName": "Project"
     }
   }
 }
