--- a/sources/VeloCity.Installer.CustomActions/VeloCity.Installer.CustomActions.csproj
+++ b/sources/VeloCity.Installer.CustomActions/VeloCity.Installer.CustomActions.csproj
@@ -44,6 +44,7 @@
     <Compile Include="..\AssemblyInfo.Shared.cs">
       <Link>Properties\AssemblyInfo.Shared.cs</Link>
     </Compile>
+    <Compile Include="MissingConfigurationFileException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadFromConfigFileCustomAction.cs" />
     <Compile Include="UpdateConfigFileCustomActions.cs" />
