--- a/sources/VeloCity.Presentation/VeloCity.Presentation.csproj
+++ b/sources/VeloCity.Presentation/VeloCity.Presentation.csproj
@@ -34,4 +34,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <ProjectReference Include="..\VeloCity.Presentation.Infrastructure\VeloCity.Presentation.Infrastructure.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Commands\Holidays\" />
+    </ItemGroup>
+
 </Project>
