fixed parameter identification mechanism

--- a/sources/VeloCity.Bootstrapper/Properties/launchSettings.json
+++ b/sources/VeloCity.Bootstrapper/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
-    "profiles": {
-        "VeloCity.Bootstrapper": {
-            "commandName": "Project"
-        }
+  "profiles": {
+    "VeloCity.Bootstrapper": {
+      "commandName": "Project",
+      "commandLineArgs": "holidays 2021"
     }
+  }
 }
