#28 - fixed the official holiday calculation algorithm to take into account the country

--- a/sources/VeloCity.Domain/VeloCity.Domain.csproj
+++ b/sources/VeloCity.Domain/VeloCity.Domain.csproj
@@ -24,4 +24,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <RootNamespace>DustInTheWind.VeloCity.Domain</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Compile Remove="MemberDayAnalysis.cs" />
+    </ItemGroup>
+
 </Project>
