--- a/sources/VeloCity.Bootstrapper/VeloCity.Bootstrapper.csproj
+++ b/sources/VeloCity.Bootstrapper/VeloCity.Bootstrapper.csproj
@@ -42,6 +42,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <None Update="appsettings.json">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
+        <None Update="velo-city-database.json">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
 </Project>
