--- a/sources/VeloCity.Bootstrapper/Properties/launchSettings.json
+++ b/sources/VeloCity.Bootstrapper/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "VeloCity.Bootstrapper": {
       "commandName": "Project",
-      "commandLineArgs": "calendar"
+      "commandLineArgs": "forecast -d 2022-05-18"
     }
   }
 }
