--- a/sources/VeloCity.Application/VeloCity.Application.csproj
+++ b/sources/VeloCity.Application/VeloCity.Application.csproj
@@ -33,4 +33,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <ProjectReference Include="..\VeloCity.Domain\VeloCity.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+            <_Parameter1>DustInTheWind.VeloCity.Tests</_Parameter1>
+        </AssemblyAttribute>
+    </ItemGroup>
+
 </Project>
