--- a/sources/VeloCity.Bootstrapper/Properties/launchSettings.json
+++ b/sources/VeloCity.Bootstrapper/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "VeloCity.Bootstrapper": {
       "commandName": "Project",
-      "commandLineArgs": "db"
+      "commandLineArgs": "sprint 26 -z ale"
     }
   }
 }
