--- a/sources/VeloCity.Cli.Application/VeloCity.Cli.Application.csproj
+++ b/sources/VeloCity.Cli.Application/VeloCity.Cli.Application.csproj
@@ -29,8 +29,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\VeloCity.DataAccess.Jsonfiles\VeloCity.DataAccess.JsonFiles.csproj" />
-        <ProjectReference Include="..\VeloCity.Domain\VeloCity.Domain.csproj" />
+        <ProjectReference Include="..\VeloCity.DataAccess.Jsonfiles\VeloCity.DataAccess.JsonFiles.csproj" PrivateAssets="All" />
+        <ProjectReference Include="..\VeloCity.Domain\VeloCity.Domain.csproj" PrivateAssets="All" />
     </ItemGroup>
 
     <ItemGroup>
