--- a/sources/VeloCity.Cli.Bootstrapper/VeloCity.Cli.Bootstrapper.csproj
+++ b/sources/VeloCity.Cli.Bootstrapper/VeloCity.Cli.Bootstrapper.csproj
@@ -32,11 +32,12 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\VeloCity.SettingsAccess\VeloCity.SettingsAccess.csproj" />
-        <ProjectReference Include="..\VeloCity.Cli.Application\VeloCity.Cli.Application.csproj" />
-        <ProjectReference Include="..\VeloCity.DataAccess\VeloCity.DataAccess.csproj" />
-        <ProjectReference Include="..\VeloCity.Cli.Presentation\VeloCity.Cli.Presentation.csproj" />
-        <ProjectReference Include="..\VeloCity.SystemAccess\VeloCity.SystemAccess.csproj" />
+        <ProjectReference Include="..\VeloCity.Presentation.Infrastructure\VeloCity.Presentation.Infrastructure.csproj" PrivateAssets="All" />
+        <ProjectReference Include="..\VeloCity.SettingsAccess\VeloCity.SettingsAccess.csproj" PrivateAssets="All" />
+        <ProjectReference Include="..\VeloCity.Cli.Application\VeloCity.Cli.Application.csproj" PrivateAssets="All" />
+        <ProjectReference Include="..\VeloCity.DataAccess\VeloCity.DataAccess.csproj" PrivateAssets="All" />
+        <ProjectReference Include="..\VeloCity.Cli.Presentation\VeloCity.Cli.Presentation.csproj" PrivateAssets="All" />
+        <ProjectReference Include="..\VeloCity.SystemAccess\VeloCity.SystemAccess.csproj" PrivateAssets="All" />
     </ItemGroup>
 
     <ItemGroup>
