--- a/sources/VeloCity.Wpf.Bootstrapper/VeloCity.Wpf.Bootstrapper.csproj
+++ b/sources/VeloCity.Wpf.Bootstrapper/VeloCity.Wpf.Bootstrapper.csproj
@@ -32,11 +32,12 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\VeloCity.SettingsAccess\VeloCity.SettingsAccess.csproj" />
-        <ProjectReference Include="..\VeloCity.DataAccess\VeloCity.DataAccess.csproj" />
-        <ProjectReference Include="..\VeloCity.Domain\VeloCity.Domain.csproj" />
-        <ProjectReference Include="..\VeloCity.SystemAccess\VeloCity.SystemAccess.csproj" />
-        <ProjectReference Include="..\VeloCity.Wpf.Presentation\VeloCity.Wpf.Presentation.csproj" />
+        <ProjectReference Include="..\VeloCity.SettingsAccess\VeloCity.SettingsAccess.csproj" PrivateAssets="All" />
+        <ProjectReference Include="..\VeloCity.DataAccess\VeloCity.DataAccess.csproj" PrivateAssets="All" />
+        <ProjectReference Include="..\VeloCity.Domain\VeloCity.Domain.csproj" PrivateAssets="All" />
+        <ProjectReference Include="..\VeloCity.SystemAccess\VeloCity.SystemAccess.csproj" PrivateAssets="All" />
+        <ProjectReference Include="..\VeloCity.Wpf.Application\VeloCity.Wpf.Application.csproj" PrivateAssets="All" />
+        <ProjectReference Include="..\VeloCity.Wpf.Presentation\VeloCity.Wpf.Presentation.csproj" PrivateAssets="All" />
     </ItemGroup>
 
     <ItemGroup>
