#78 - replaced the custom made presentation layer commands with ConsoleTools.Commando

--- a/sources/VeloCity.Cli.Bootstrapper/Properties/launchSettings.json
+++ b/sources/VeloCity.Cli.Bootstrapper/Properties/launchSettings.json
@@ -1,8 +1,8 @@
 {
-  "profiles": {
-    "VeloCity.Bootstrapper": {
-      "commandName": "Project",
-      "commandLineArgs": "forecast"
+    "profiles": {
+        "VeloCity.Bootstrapper": {
+            "commandName": "Project",
+            "commandLineArgs": "calendar -a 2022-08-01 -z 2022-11-01"
+        }
     }
-  }
 }
