--- a/sources/VeloCity.Cli.Bootstrapper/log4net.config
+++ b/sources/VeloCity.Cli.Bootstrapper/log4net.config
@@ -3,10 +3,11 @@
 <log4net>
 
     <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
-        <file value="${LOCALAPPDATA}\VeloCity\VeloCity.log" />
+        <file value="${LOCALAPPDATA}\VeloCity\VeloCity,log" />
         <appendToFile value="true" />
         <rollingStyle value="Date" />
-        <datePattern value="yyyyMMdd" />
+        <datePattern value=".yyyy-MM-dd" />
+        <preserveLogFileNameExtension value="true" />
         <layout type="log4net.Layout.PatternLayout">
             <conversionPattern value="[%date] [%thread] %-5level - %message%newline" />
         </layout>
