#99 - created a sprint state control

--- a/sources/VeloCity.Wpf.Presentation/VeloCity.Wpf.Presentation.csproj
+++ b/sources/VeloCity.Wpf.Presentation/VeloCity.Wpf.Presentation.csproj
@@ -46,6 +46,9 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     </ItemGroup>
 
     <ItemGroup>
+        <Page Update="Generic.xaml">
+          <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+        </Page>
         <Page Update="Pages\Main\MainWindow.xaml">
             <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
             <SubType>Designer</SubType>
