added an application icon

--- a/sources/VeloCity.Wpf.Bootstrapper/VeloCity.Wpf.Bootstrapper.csproj
+++ b/sources/VeloCity.Wpf.Bootstrapper/VeloCity.Wpf.Bootstrapper.csproj
@@ -24,6 +24,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <UseWPF>true</UseWPF>
         <AssemblyName>VeloCity</AssemblyName>
         <RootNamespace>DustInTheWind.VeloCity.Wpf.Bootstrapper</RootNamespace>
+        <ApplicationIcon>icon.ico</ApplicationIcon>
     </PropertyGroup>
 
     <ItemGroup>
