#122 - added the velocity chart

--- a/sources/VeloCity.Wpf.Presentation/VeloCity.Wpf.Presentation.csproj
+++ b/sources/VeloCity.Wpf.Presentation/VeloCity.Wpf.Presentation.csproj
@@ -31,6 +31,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="LiveCharts.Wpf" Version="0.9.7" />
         <PackageReference Include="MediatR" Version="10.0.1" />
     </ItemGroup>
 
