changed the icon

--- a/sources/VeloCity.Cli.Bootstrapper/VeloCity.Cli.Bootstrapper.csproj
+++ b/sources/VeloCity.Cli.Bootstrapper/VeloCity.Cli.Bootstrapper.csproj
@@ -23,6 +23,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <TargetFramework>net5.0</TargetFramework>
         <AssemblyName>velo</AssemblyName>
         <RootNamespace>DustInTheWind.VeloCity.Cli.Bootstrapper</RootNamespace>
+        <ApplicationIcon>icon.ico</ApplicationIcon>
     </PropertyGroup>
 
     <ItemGroup>
