--- a/sources/VeloCity.SettingsAccess/VeloCity.SettingsAccess.csproj
+++ b/sources/VeloCity.SettingsAccess/VeloCity.SettingsAccess.csproj
@@ -30,7 +30,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\VeloCity.Domain\VeloCity.Domain.csproj" />
+        <ProjectReference Include="..\VeloCity.Domain\VeloCity.Domain.csproj" PrivateAssets="All" />
     </ItemGroup>
 
 </Project>
