--- a/sources/VeloCity.Tests/VeloCity.Tests.csproj
+++ b/sources/VeloCity.Tests/VeloCity.Tests.csproj
@@ -45,6 +45,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
         <ProjectReference Include="..\VeloCity.Cli.Application\VeloCity.Cli.Application.csproj" PrivateAssets="All" />
         <ProjectReference Include="..\VeloCity.Cli.Presentation\VeloCity.Cli.Presentation.csproj" PrivateAssets="All" />
         <ProjectReference Include="..\VeloCity.Domain\VeloCity.Domain.csproj" PrivateAssets="All" />
+        <ProjectReference Include="..\VeloCity.Wpf.Infrastructure\VeloCity.Infrastructure.csproj" PrivateAssets="All" />
     </ItemGroup>
 
 </Project>
